--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <figure>
       <<img src="images/beets.jpg" alt="">
-    ,<figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+    <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
     55 to 65 days are needed from germination to harvest of the root.
@@ -33,7 +33,7 @@
     I have some weird habits. For instance, I love beets. Show me a salad bar and I will clean them out of their beets.
     — Chris Pratt
 
-    Common varieties
+    <h2>Common varieties</h2>
 
     Albino
     Bull’s Blood
@@ -41,7 +41,7 @@
     Detroit Dark Red
     Early Wonder
 
-    Nutritional information
+    <h2>Nutritional information</h2>
 
     Serving size: 100 g
 
@@ -52,7 +52,7 @@
   </main>
 
   <aside>
-    Tags
+    <h2>Tags</h2>
 
     Crimson
     Awesome
