--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </aside>
 
   <footer>
-    Source: Wikipedia; Last modified: Aug 30, 2014
+    <small>Source: <a href="http://www.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</small>
   </footer>
 
 </body>
