--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <header>
-    <h1>Beetroot (Beta vulgaris)</h1>
+    <h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
     <nav>
       <ol>
@@ -49,13 +49,13 @@
 
     <dl>
       <dt>Energy:</dt>
-      <dd>180 kJ</dd>
+      <dd><data>180 kJ</data></dd>
       <dt>Carbohydrates:</dt>
-      <dd>9.96 g</dd>
+      <dd><data>9.96 g</data></dd>
       <dt>Fat:</dt>
-      <dd>0.18 g</dd>
+      <dd><data>0.18 g</data></dd>
       <dt>Protein:</dt>
-      <dd>1.68 g</dd>
+      <dd><data>1.68 g</data></dd>
     </dl>
 
   </main>
